fixed white spaces issues

--- a/resumeCss.css
+++ b/resumeCss.css
@@ -35,7 +35,8 @@ img.headerGradient {
 #cover {
 	position: absolute;
 	/*top: 50%;*/
-	height: 204%;
+	height: 190%;
+	left: 0%;
 	width: 100%;
 	background-color: #252525;
 	z-index: 2;
